--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -2,15 +2,13 @@
 @import "tailwindcss";
 @plugin "daisyui";
 
-body {
-  /* font-family: 'Outfit'; */
-}
 
 /* styles.css */
 .text-glow {
   text-shadow: 0 0 5px rgba(255, 255, 255, 0.6),
                0 0 10px rgba(255, 255, 255, 0.4),
                0 0 20px rgba(255, 255, 255, 0.2);
+               /* color: [#897a69]; */
 }
 
 .text-glow-gold {
